--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-streamlit>=1.28.0
-pandas>=1.5.0
-pybliometrics>=3.0.0
-openpyxl>=3.0.0
-xlsxwriter>=3.0.0
-
+streamlit
+pandas
+pybliometrics
+openpyxl
+xlsxwriter
